--- a/css/microbox.css
+++ b/css/microbox.css
@@ -156,6 +156,7 @@
   background-image: linear-gradient(-180deg, rgba(0,0,0,0.3), rgba(0,0,0,0.4));
 }
 .microbox-close {
+  line-height: 40px;
   right: 10px;
   top: 10px;
 }
