--- a/stylus/microbox.styl
+++ b/stylus/microbox.styl
@@ -93,6 +93,7 @@ $pager-active = darken($pager-hover, 8%)
 	button()
 
 .microbox-close
+	line-height $button - 6
 	right $button-margin
 	top $button-margin
 
@@ -122,6 +123,7 @@ $pager-active = darken($pager-hover, 8%)
 
 [microbox-trigger-next]
 [microbox-trigger-prev]
+
 	&.disabled
 		button-disabled()
 
