--- a/css/microbox.css
+++ b/css/microbox.css
@@ -42,6 +42,12 @@
   position: absolute;
 }
 .microbox img {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
   bottom: 0;
   -webkit-box-shadow: 0 0 3px rgba(0,0,0,0.2);
   -moz-box-shadow: 0 0 3px rgba(0,0,0,0.2);
