--- a/stylus/microbox.styl
+++ b/stylus/microbox.styl
@@ -52,6 +52,7 @@ $pager-active = darken($pager-hover, 8%)
 		position absolute
 
 	img
+		noselect()
 		bottom 0
 		box-shadow 0 0 3px rgba(0, 0, 0, 0.2)
 		cursor zoom-in
