better handheld support

--- a/css/microbox.css
+++ b/css/microbox.css
@@ -303,3 +303,23 @@
   -o-transform: rotate(180deg);
   transform: rotate(180deg);
 }
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) {
+  .microbox-counts {
+    display: none !important;
+  }
+  .caption .microbox-button {
+    right: 0;
+  }
+  .microbox-close {
+    right: 0;
+    top: 0;
+  }
+  .microbox-pager {
+    bottom: 0;
+    left: 0;
+  }
+  [microbox-trigger-next],
+  [microbox-trigger-prev] {
+    line-height: 41px !important;
+  }
+}
