--- a/css/microbox.css
+++ b/css/microbox.css
@@ -162,7 +162,8 @@
   background-image: linear-gradient(-180deg, rgba(0,0,0,0.3), rgba(0,0,0,0.4));
 }
 .microbox-close {
-  line-height: 40px;
+  font-family: Arial;
+  line-height: 48px;
   right: 10px;
   top: 10px;
 }
