tweak button styles

--- a/stylus/microbox.styl
+++ b/stylus/microbox.styl
@@ -84,6 +84,7 @@ $pager-active = darken($pager-hover, 8%)
 		text-align center
 
 [microbox-trigger-caption]
+	cursor pointer !important
 	font-family "Times New Roman"
 	font-style italic
 	right $button-margin
