--- a/css/microbox.css
+++ b/css/microbox.css
@@ -27,10 +27,20 @@
   transition: all 0.2s linear;
 }
 .microbox .caption.active [microbox-trigger-caption] {
-  border: 2px solid rgba(255,255,255,0.8);
+  cursor: pointer;
+}
+.microbox .caption.active [microbox-trigger-caption],
+.microbox .caption.active [microbox-trigger-caption]:active,
+.microbox .caption.active [microbox-trigger-caption]:hover {
+  background: rgba(0,0,0,0.6);
+  -webkit-box-shadow: 0 0 0;
+  -moz-box-shadow: 0 0 0;
+  -ms-box-shadow: 0 0 0;
+  -o-box-shadow: 0 0 0;
+  box-shadow: 0 0 0;
   color: #fff;
   cursor: default;
-  cursor: pointer;
+  font-weight: bold;
 }
 .microbox .caption.hide {
   display: none;
@@ -99,6 +109,7 @@
   text-align: center;
 }
 [microbox-trigger-caption] {
+  cursor: pointer !important;
   font-family: "Times New Roman";
   font-style: italic;
   right: 10px;
@@ -246,10 +257,18 @@
   background-image: -o-linear-gradient(-90deg, rgba(0,0,0,0.3), rgba(0,0,0,0.4));
   background-image: linear-gradient(-180deg, rgba(0,0,0,0.3), rgba(0,0,0,0.4));
 }
-.microbox-pager li.active {
-  border: 2px solid rgba(255,255,255,0.8);
+.microbox-pager li.active,
+.microbox-pager li.active:active,
+.microbox-pager li.active:hover {
+  background: rgba(0,0,0,0.6);
+  -webkit-box-shadow: 0 0 0;
+  -moz-box-shadow: 0 0 0;
+  -ms-box-shadow: 0 0 0;
+  -o-box-shadow: 0 0 0;
+  box-shadow: 0 0 0;
   color: #fff;
   cursor: default;
+  font-weight: bold;
 }
 .microbox-pager .microbox-counts {
   padding: 0 10px;
